--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi readymag!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="img/icon.png" href="img/icon.png">
 </head>
 
 <body>
